--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,17 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>client</title>
+    <meta charset="utf-8" />
+    <meta name="keywords" content="daily, global, meditation" />
+	  <meta name="description" content="Daily Global Meditation" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <title>Daily Global Meditation</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but client doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <p>
+        We're sorry, this website has limited functionality without JavaScript
+        enabled.<br>
+        <br>
+        Please enable JavaScript for the full experience.
+      </p>
+      <h1>Daily Global Meditation</h1>
+
+      <h2>Invitation:</h2>
+      <div class="poetic">
+        Birthing of the New Earth Culture and Consciousness
+      </div>
+      <div class="center">
+        Each Day: 5 Minute Meditation at 8 p.m., Local Time
+        <br>
+        (or choose first 5 minutes of any hour of the day)
+      </div>
+      
+      <h2>Simple Guidelines:</h2>
+      <ol>
+        <li>Be in the Stillness.</li>
+        <li>Envision Earth and Sky as Already Illumined and Whole. Feel It!</li>
+        <li>Release the Vision.</li>
+        <li>Silently say: This Meditation is for the Earth and Sky.</li>
+        <li>Rest in the Infinite. Rest in the Light of Consciousness.<br>
+            Be empty by being open and receptive to the Higher Awareness.<br> 
+            Thy Will Be Done.<br>
+            Listen Within.</li>
+      </ol>
+
+      <h2>Sacred Sound</h2>
+      <div>
+        ...(option of meditation with or without sacred sounding)...<br>
+        <br class="spacer">
+        note: 
+      </div>
+      <ul>
+        <li>One will connect with the Divine Current.</li>
+        <li>One will be One with the Infinite.</li>
+        <li>One will be open to the Perfect Plan for Earth and Sky.</li>
+        <li>One will realize that Action is Borne of Vision.</li>
+      </ul>
+
+      <h2>Presented and Supported by:</h2>
+      <ul>
+        <li><a href="http://EarthCareGlobalTV.com">EarthCare Global TV</a></li>
+        <li><a href="https://InSharedOneness.com">In Shared Oneness</a>:<br>
+          <ul>
+          <li><a href="http://MarySaintMarie.com">Mary Saint Marie</a></li>
+          <li><a href="http://letempledelesprit.com/">Angelique Jan Pera</a></li>
+          <li><a href="https://kagalakan.com">Edward Maesen</a></li>
+          </ul>
+        </li>
+      </ul>
     </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
 </html>
