--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,7 +24,7 @@
         Birthing of the New Earth Culture and Consciousness
       </div>
       <div class="center">
-        Each Day: 5 Minute Meditation at 8 p.m., Local Time
+        5 Minute Meditation, Each Day at 8 PM, Local Time
         <br>
         (or choose first 5 minutes of any hour of the day)
       </div>
@@ -43,9 +43,7 @@
 
       <h2>Sacred Sound</h2>
       <div>
-        ...(option of meditation with or without sacred sounding)...<br>
-        <br class="spacer">
-        note: 
+        ...(option of meditation with or without sacred sounding)...
       </div>
       <ul>
         <li>One will connect with the Divine Current.</li>
