--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="keywords" content="daily, global, meditation" />
+    <meta name="keywords" content="daily, global, meditation, planetary, world, earth, sky, culture, consciousness, illumined, whole" />
 	  <meta name="description" content="Daily Global Meditation" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
