--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,6 +6,7 @@
 	  <meta name="description" content="Daily Global Meditation" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta name="mobile-web-app-capable" content="yes">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>Daily Global Meditation</title>
   </head>
