--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="keywords" content="daily, global, meditation, planetary, world, earth, sky, culture, consciousness, illumined, whole" />
+    <meta name="keywords" content="daily, global, meditation, synchronized, planetary, world, earth, sky, culture, consciousness, illumined, whole" />
 	  <meta name="description" content="Daily Global Meditation" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
@@ -51,6 +51,14 @@
         <li>One will be One with the Infinite.</li>
         <li>One will be open to the Perfect Plan for Earth and Sky.</li>
         <li>One will realize that Action is Borne of Vision.</li>
+      </ul>
+
+      <h2>Global Awakening</h2>
+      <ul>
+        <li>A daily synchronized wave of Awareness Awakening…</li>
+        <li>propagating around the globe.</li>
+        <li>The group effect…</li>
+        <li>amplifying the intentions of each individual.</li>
       </ul>
 
       <h2>Presented and Supported by:</h2>
